minor fixes on button icon and alignments

--- a/src/components/button-icon/button-icon.scss
+++ b/src/components/button-icon/button-icon.scss
@@ -24,7 +24,7 @@
     }
 
     &.size-lg {
-        padding: 16px;
+        padding: 8px;
         svg {
             width: 46px;
             height: 46px;
