--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -14,7 +14,7 @@
 }
 
 .scv-button {
-  padding: 6px 20px;
+  padding: 10px 20px;
   color: white;
   border: 0;
   font-weight: 600;
@@ -25,6 +25,11 @@
   cursor: pointer;
   text-decoration: none;
   text-transform: capitalize;
+
+  
+  @media screen and (min-width: 768px) {
+    padding: 6px 20px;
+  }  
 
   &.full {
     width: 100%;
