--- a/src/components/side-menu/side-menu.scss
+++ b/src/components/side-menu/side-menu.scss
@@ -18,6 +18,12 @@
             margin-left: 16px;
         }
     }
+
+    .side-menu-bottom {
+        display: flex;
+        align-items: center;
+        justify-content: center;        
+    }
     
 
     @media screen and (min-width: 768px) {
@@ -32,7 +38,6 @@
         padding: 8px 0;
         position: relative;
         width: auto;
-        text-align: center;
 
         &:after {
             content: " ";
